<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="198dp">

        <TextView
            android:id="@+id/dialog_txtVW_title"
            android:layout_marginTop="20dp"
            android:textSize="26sp"
            android:textColor="#FFF"
            android:text="@string/create_new_subject"
            android:textAlignment="center"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="#131E69"
            android:layout_height="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_item_subject"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingTop="22dp">

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/add_subject"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/dialog_edTxt_subjectName"
                android:inputType="text"
                android:background="@drawable/background_put_subject"
                android:paddingStart="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/subject"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                tools:ignore="Autofill,RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/dialog_btn_save"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_now"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:background="@drawable/background_btn_create"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:id="@+id/dialog_btn_close"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/cancel"
        android:textColor="#000"
        android:textAllCaps="false"
        android:background="@drawable/background_btn_cancel"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</LinearLayout>
